# py-toshi-client

./: Dockerfile  LICENSE  README.md  config.toml  docker-compose.yaml  pyproject.toml  pytest.ini
.github/actions/setup_env/: action.yaml
.github/workflows/: ci.yaml
py-toshi-client/: client.py  enums.py  errors.py  index_builder.py
py-toshi-client/index/: __init__.py  enums.py  field_options.py  index.py  index_builder.py  index_summary.py
py-toshi-client/models/: document.py  query.py
py-toshi-client/query/: __init__.py  bool_query.py  facet_query.py  fuzzy_query.py  phrase_query.py  range_query.py  regex_query.py  term_query.py
py-toshi-client/schemas/: document.py  field_options.py  index.py  index_summary.py
py-toshi-client/tests/: conftest.py  test_async_client.py  test_index_builder.py  test_integration_async.py  test_integration_sync.py  test_sync_client.py
py-toshi-client/tests/query/: test_bool_query.py  test_fuzzy_query.py  test_phrase_query.py  test_range_query.py
requirements/: requirements.txt  requirements_test.txt
src/toshi_client/: client.py  errors.py
src/toshi_client/index/: enums.py  field_options.py  index.py  index_builder.py  index_summary.py
src/toshi_client/models/: document.py  field_options.py
src/toshi_client/query/: bool_query.py  facet_query.py  fuzzy_query.py  phrase_query.py  (+3 more)
tests/: conftest.py  test_async_client.py  test_index_builder.py  test_integration_async.py  test_integration_sync.py  test_sync_client.py
tests/query/: test_bool_query.py  test_fuzzy_query.py  test_phrase_query.py  test_range_query.py
