[project]
name = "toshi_client"
version = "0.0.1"
authors = [
  { name="Rouven Reuter", email="rouven.reuter91@gmail.com" },
]
description = "Python client for the Full-Text Search Engine Toshi"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
 "requests>=2.32.3",
 "aiohttp>=3.9.5"
]
[project.urls]
Homepage = "https://github.com/SmartMonkey-git/py-toshi-client"
Issues = "https://github.com/SmartMonkey-git/py-toshi-client/issues"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"